CTT_Package/objects/Component__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <description>This is just a dummy placeholder for comment which will be displayed on lightning component. But the value of this field will be saved in version history object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Component_API_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Component API Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_want_to_work_on__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>I want to work on :</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Locked By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Higher_Org_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Higher Org Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Class_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Component_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Test_Class_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>